--- a/app/globals.css
+++ b/app/globals.css
@@ -55,7 +55,7 @@
   --destructive: hsl(0 84.2% 60.2%);
   --destructive-foreground: hsl(210 20% 98%);
   --border: hsl(12, 70%, 70%);
-  --input: hsl(220 13% 91%);
+  --input: hsl(0, 100%, 99%);
   --ring: var(--accent);
   --chart-1: hsl(12 76% 61%);
   --chart-2: hsl(173 58% 39%);
